-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.5, 5.10.1, 5.11.0
-
Qt 5.10.1, macOS 10.13.4
-
95b1b468413c2eeae18b0e698e3e37333c719db4
Possibly it doesn't track any assignment to function parameters. If so, then it's likely a bug in Qt, though.
For Gerrit Dashboard: QTBUG-68534 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
230783,3 | V4: Set argumentsCanEscape when debugging | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |