V4: Set argumentsCanEscape when debugging

This causes the updated arguments to be reported to the debugger when
they are overwritten in the function body.

Task-number: QTBUG-68534
Change-Id: I30c22d31aa97da0d58a4bbaaa032180a919669a8
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>